--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.materialDesignVersion = "1.4.0"
+    ext.material_design_version = "1.4.0"
+    ext.life_cycle ="2.3.1"
 
     repositories {
         google()
+        maven { url 'https://maven.google.com' }
         mavenCentral()
     }
     dependencies {
